# holo-auto-installer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
src/: agent.rs  config.rs  entries.rs  get_apps.rs  get_happ_preferences.rs  get_kyc_level.rs  hbs.rs  host_zome_calls.rs  install_app.rs  kyc.rs  lib.rs  main.rs  suspend_happs.rs  transaction_types.rs  uninstall_apps.rs  utils.rs  websocket.rs
src/types/: happ.rs  hbs.rs  mod.rs  transaction.rs
src/utils/: core_app.rs  hbs.rs  mod.rs
