[package]
name = "holo-auto-installer"
version = "0.4.0"
authors = ["Joel U <joelulahanna@gmail.com>"]
edition = "2021"

[dependencies]
again = "0.1"
anyhow = "1.0"
base64= "0.22.1"
isahc = "1.7.2"
itertools = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.25"
structopt = "0.3"
tempfile = "3.1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = "0.3.17"
rmp-serde = "0.15"
url = "2.5.0"
observability = "0.1.3"
reqwest = { version = "0.12", features = ["json"]}
holofuel_types = "0.5.9"
getrandom = "0.2.7"
url2 = "0.0.6"
sodoken = "0.0.11"
holochain_types = {version = "0.4.0-dev.11", features = ["chc"]}
holochain_conductor_api = { version = "0.4.0-dev.11", features = ["chc"]}
holochain_keystore = { version = "0.4.0-dev.11" }
holochain_websocket = { version = "0.4.0-dev.2"}
mr_bundle = { version = "0.4.0-dev.4" }
hpos-config-core = { git = "https://github.com/Holo-Host/hpos-config", rev = "c17067b6a4214f9646316fa681651b73c72bf7e1" }
hpos-config-seed-bundle-explorer ={ git = "https://github.com/Holo-Host/hpos-config", rev = "c17067b6a4214f9646316fa681651b73c72bf7e1" }
chrono = "0.4.33"
hpos_hc_connect = { git = "https://github.com/holo-host/hpos-service-crates.git", rev = "198b24814292484a84c16d1259889aba07e57ab8" }
