[package]
name = "holo-auto-installer"
version = "0.4.1"
authors = ["Joel U <joelulahanna@gmail.com>"]
edition = "2021"

[dependencies]
again = "0.1"
anyhow = "1.0"
base64= "0.22.1"
isahc = "1.7.2"
itertools = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.25"
structopt = "0.3"
tempfile = "3.1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = "0.3.17"
rmp-serde = "0.15"
url = "2.5.0"
observability = "0.1.3"
reqwest = { version = "0.12", features = ["json"]}
getrandom = "0.2.7"
url2 = "0.0.6"

sodoken = "0.0.11"
holofuel_types = "0.5.12"
holochain_types = {version = "0.4.0-dev.18", features = ["chc"]}
holochain_conductor_api = { version = "0.4.0-dev.18", features = ["chc"]}
holochain_keystore = { version = "0.4.0-dev.16" }
holochain_websocket = { version = "0.4.0-dev.18"}
mr_bundle = { version = "0.4.0-dev.5" }
hpos-config-core = { git = "https://github.com/Holo-Host/hpos-config", rev = "86411bdaabe7061a4b150d36c062fddc2c6c74cc" }
hpos-config-seed-bundle-explorer ={ git = "https://github.com/Holo-Host/hpos-config", rev = "86411bdaabe7061a4b150d36c062fddc2c6c74cc" }
chrono = "0.4.33"
hpos_hc_connect = { git = "https://github.com/holo-host/hpos-service-crates.git", rev = "b86a56a87bdc53d9b42e1f690462d2c557375908" }
