[package]
name = "holo-auto-installer"
version = "0.4.1"
authors = ["Joel U <joelulahanna@gmail.com>"]
edition = "2021"

[dependencies]
again = "0.1"
anyhow = "1.0"
base64= "0.22.1"
chrono = "0.4.33"
isahc = "1.7.2"
itertools = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.25"
structopt = "0.3"
tempfile = "3.1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = "0.3.17"
rmp-serde = "0.15"
url = "2.5.0"
observability = "0.1.3"
reqwest = { version = "0.12", features = ["json"]}
getrandom = "0.2.7"
sodoken = "0.0.11"
url2 = "0.0.6"

holofuel_types = "0.5.14"
holochain_types = {version = "0.4.0-rc.0"}
holochain_conductor_api = { version = "0.4.0-rc.0", features = ["chc"]}
holochain_keystore = { version = "0.4.0-rc.0" }
holochain_websocket = { version = "0.4.0-rc.0"}
mr_bundle = { version = "0.4.0-rc.0" }
hpos-config-core = { git = "https://github.com/Holo-Host/hpos-config", rev = "77d740c83a02e322e670e360eb450076b593b328" }
hpos-config-seed-bundle-explorer ={ git = "https://github.com/Holo-Host/hpos-config", rev = "77d740c83a02e322e670e360eb450076b593b328" }
hpos_hc_connect = { git = "https://github.com/holo-host/hpos-service-crates.git", rev = "db6f7f675fb4997909bd43aef071551a52c6afdc" }
